--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.76.7",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "expo-location": "~18.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
