--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "expo": "~52.0.35",
+    "expo-location": "~18.0.7",
     "expo-status-bar": "~2.0.1",
     "firebase": "^11.3.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "expo-location": "~18.0.7"
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
