--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-maps": "1.18.0",
     "react-native-paper": "^5.13.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0"
+    "react-native-screens": "~4.4.0",
+    "react-native-star-rating-widget": "^1.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
